--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/robotastic/ble-ancs.git"
+    "url": "https://github.com/MudkipTheEpic/ble-ancs.git"
   },
   "bugs": {
-    "url": "https://github.com/robotastic/ble-ancs/issues"
+    "url": "https://github.com/MudkipTheEpic/ble-ancs/issues"
   },
   "keywords": [
     "Apple",
